fixed font awesome icons not showing in heroku

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -100,7 +100,7 @@ code {
     margin:auto
 }
 .booked-by{
-  right: -90px;
+  right: 77px;
 }
 
 
